# ai_platform

./: .gitignore  COMPATIBILITY.md  INSTALL.md  KNOWN_ISSUES.md  Makefile  PYTHON_VERSIONS.md  README.md  README_comprehensive_integration.md  README_full_integration.md  README_optimal_integration.md  README_ultimate_integration.md  README_updated.md  ai_platform_fix.pth  analyze_venv.py  cspell.json  install.sh  migrate_code_dir.sh  pyproject.toml  run_ml_examples.sh  sitecustomize.py  test_inline.yaml  test_pydantic.py
.cspell/: connect_dict.txt  data_wrangling_dict.txt  dummy_dict.txt  evaluation_dict.txt  framework_dict.txt  genai_dict.txt  image_tool_dict.txt  json_dict.txt  latex_dict.txt  lint_dict.txt  llm_dict.txt  lowcode_dict.txt  md_dict.txt  ml_dict.txt  person_dict.txt  prompt_dict.txt  python_dict.txt  r_dict.txt  rag_dict.txt  scientific_tool_dict.txt  shell_dict.txt  svg_dict.txt  task_dict.txt  telco_dict.txt  test_dict.txt  vectordb_dict.txt  viz_dict.txt  yaml_dict.txt  yang_dict.txt
catboost_info/: catboost_training.json  learn_error.tsv  time_left.tsv
catboost_info/learn/: events.out.tfevents
code/: README.md
code/backend/: README.md
code/common/: README.md
code/common/engine/: jsonschema_processing_engine.py  unified_orchestrator_engine.py  unified_processing_engine.py  yaml_processing_engine.py
code/common/evaluation/: README.md  __init__.py  base.py  deepeval_adapter.py  evaluation_registry.py  hf_evaluate_adapter.py  humanloop_adapter.py  langsmith_adapter.py  mirascope_adapter.py  mlflow_adapter.py  ragas_adapter.py  tensorboard_adapter.py  trulens_adapter.py  wandb_adapter.py
code/common/example/: README.md  evaluation_example.py  framework_example.py  image_tool_example.py  jsonschema_processing_example.py  latex_example.py  llm_example.py  lowcode_example.py  ml_example.py  ml_registry_example.py  ml_standalone.py  prompt_example.py  protocol_example.py  rag_example.py  scientific_tool_example.py  svg_example.py  vectordb_example.py  video_tool_example.py  visualization_example.py  visualization_tool_example.py  yaml_processing_example.py
code/common/framework/: README.md  __init__.py  akka_adapter.py  autogen_adapter.py  autogpt_adapter.py  base.py  crewai_adapter.py  framework_registry.py  gradientj_adapter.py  griptape_adapter.py  haystack_adapter.py  langchain_adapter.py  langdock_adapter.py  langgraph_adapter.py  langroid_adapter.py  outlines_adapter.py  semantic_kernel_adapter.py
code/common/handler/: __init__.py  error_handler.py  path_handler.py  (+1 more)
code/frontend/: README.md  __layer__.py
config/: README.md
config/arch/: README.md  boundary.yaml  eslint-boundary.json
config/ops/: README.md
config/requirements/: INSTALLATION.md  base.txt  dask.in  dask.txt  inst.sh  install_julia_packages.jl  install_r_packages.R  julia.in  julia.txt  package.json  pandas.in  pandas.txt  pyspark.in  pyspark.txt  r.in  r.txt  requirements-ai-platform.txt  test.txt  yaml.txt
config/virtual/: README.md
data/: cire-xxxx-values.yaml  cire-xxxx-values_uncommented-by-ai-platform.yaml  cire-xxxx-values_uncommented-by-uncomment-00.yaml  cire-xxxx-values_uncommented-by-uncomment-00_fixed-manually.yaml  sample.csv
doc/: OPTION_0_INTEGRATION_SUMMARY.md  OPTION_A_INTEGRATION_SUMMARY.md  README.md  UNCOMMENT_DIRECTORY_ANALYSIS.md  YAML_UNCOMMENTER_COMPARISON.md
doc/arch/: ARCHITECTURE.md  DEPENDENCY_RULES.md
doc/board/: README.md
doc/diagram/: README.md
doc/report/: README.md
doc/stat/: README.md
ref/uncomment/: README.md  debug_template_backtracking.py  debug_template_stack.py  test_integration.py  test_orchestrator.py  uncomment_cli.py  verify_model.py  verify_model_PA1a.py
ref/uncomment-00/: README.md  config.yaml  uncomment_yaml_template.py  uncomment_yaml_template_anonymous.py  uncomment_yaml_template_refactored.py
test/: README.md
(+357 files in other folders)
