[project]
name = "ai_platform"
version = "0.0.0"
description = "Universal AI Platform"
authors = [{ name = "Grzegorz Stadnik", email = "neuroanimal@gmail.com" }]

dependencies = [
    "check-jsonschema>=0.36.0",
    "openpyxl>=3.1.5",
    "PyYAML>=6.0.2",
    "ruamel.yaml>=0.18.17",
    "setuptools>=80.9.0",
    "pydantic>=2.0.0,<3.0.0",   # Pin to force compatible pydantic-core
]

requires-python = ">=3.13.0"
readme = "README.md"
license = { file = "LICENSE" }

[project.optional-dependencies]
llm = [
    "openai>=1.0.0",
    "anthropic>=0.18.0",
    "google-generativeai>=0.3.0",
    "cohere>=4.0.0",
]
ml = [
    "scikit-learn>=1.3.0",
    "xgboost>=2.0.0",
    "lightgbm>=4.0.0",
    "catboost>=1.2.0",
    "torch>=2.0.0",
    "tensorflow>=2.15.0",
    "jax>=0.4.0",
    "mxnet>=1.9.0",
    "joblib>=1.3.0",
]
vectordb = [
    "qdrant-client>=1.7.0",
    # chromadb requires onnxruntime/pulsar-client which lack Python 3.15 support
    # "chromadb>=0.4.0",
]
rag = ["llama-index>=0.9.0", "langchain>=0.1.0"]
viz = [
    "plotly>=5.18.0",
    "matplotlib>=3.8.0",
    "seaborn>=0.13.0",
    "pillow>=10.0.0",    # Explicit version to prefer binary wheels
]
all = [
    "openai>=1.0.0",
    "anthropic>=0.18.0",
    "scikit-learn>=1.3.0",
    "xgboost>=2.0.0",
    "lightgbm>=4.0.0",
    "catboost>=1.2.0",
    "qdrant-client>=1.7.0",
    "langchain>=0.1.0",
    "plotly>=5.18.0",
    "matplotlib>=3.8.0",
    "joblib>=1.3.0",
    # chromadb and llama-index have Python 3.15 compatibility issues
]

[build-system]
requires = ["setuptools>=65.0", "pdm-backend >= 2.4.0"]
build-backend = "setuptools.build_meta"
# build-backend = "pdm.backend"

[tool.setuptools]
packages = ["code", "code.common", "code.backend"]

[tool.setuptools.package-dir]
"" = "."

[tool.pdm]
distribution = true

[tool.pdm.build]
includes = ["code/common", "code/backend"]
excludes = ["test"]

[tool.pdm.dev-dependencies]
dev = [
    "pre-commit",
    "ruff",
    "beautifulsoup4",
    "tqdm",
    "pytest",
    "pytest-cov",
    "pytest-mock",
    "pytest-redis",
    "geventhttpclient",
    "-e file:///${PROJECT_ROOT}/../lib/my_example_lib",
]

[dependency-groups]
test = [
    "pytest",
    "pytest-cov",
    "pytest-mock",
    "pytest-redis",
    "geventhttpclient",
]

[tool.pylint]
ignore-patterns = ["test/"]
init-hook = "import sys; sys.path.insert(0, '.')"

[tool.pylint.'MESSAGES CONTROL']
disable = ["too-many-arguments", "too-many-locals"]
